[tool.poetry]
name = "facturador-impuestos"
version = "0.1.0"
description = ""
authors = ["argonarch <armando12123434@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
imap-tools = "^1.5.0"
requests = "^2.31.0"

[tool.poetry.scripts]
start = "facturador_impuestos.mail:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
